--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,9 @@
+@charset "utf-8";
+
 body{
-    background-color: rgb(50,50,80);
+    background-color: rgb(250,250,250);
+    font-family: "Helvetica Neue", Helvetica, "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", "メイリオ", Meiryo, sans-serif;
+    overflow: hidden;
 }
 #topBar{
     position: absolute;
@@ -12,25 +16,54 @@ body{
 
 #textHeader{
     position: absolute;
-    height: 85vh;
-    width: 15vh;
-    top: 15vh;
+    box-sizing: border-box;
+    height: 85%;
+    width: 20%;
+    top: 15%;
     left:0vw;
     color:rgb(200,200,200);
+    background-color: rgb(40,50,60);
+    overflow-x: hidden;
+    padding: 1%;
 }
 
 #toolBar{
     position:absolute;
     top:50%;
-    left:15%;
+    left:20%;
     width:85%;
     height:50%;
 }
 
-#title{
+textarea#title{
+    position: relative;
+    box-sizing: border-box;
+    height: 100%;
+    top:0%;
+    resize: none;
+
+}
+
+.chap{
+    margin:5px;
+    font-size:12px;
+
+}
+
+#load{
+    position: absolute;
+    width: 30vmin;
+    height:30vmin;
+    top:calc(50vh - 15vmin);
+    min-height: 30%;
+    border-radius: 50%;
+    background-color: rgb(200,200,50);/* 円の色 */
+
 }
 
 .toolButton{
+    position: relative;
+    box-sizing: border-box;
     width: 20%;
     height:100%;
     background-color: rgb(50,120,80);
@@ -38,14 +71,15 @@ body{
     border-style: hidden;
 }
 .toolButton:hover{
-    border-bottom: 5px solid rgb(30,100,60);
+    border-bottom: 10px solid rgb(30,100,60);
 }
 
 #editorAria{
     position: absolute;
+    box-sizing:border-box;
     top:15vh;
-    left:15vw;
-    width: 85vw;
+    left:20vw;
+    width: 80vw;
     height: 85vh;
 }
 textarea#inputText{
@@ -53,18 +87,21 @@ textarea#inputText{
     box-sizing: border-box;
     top:0%;
     left:0%;
-    width:50%;
+    width:30%;
     height: 100%;
     background-color: rgb(245,245,245);
     resize:none;
     font-size:16px;
+    overflow-y: scroll;
 }
 #markdownContent{
     position: absolute;
     box-sizing: border-box;
     top:0%;
-    left:50%;
-    width:50%;
+    left:30%;
+    width:70%;
     height:100%;
     background-color: rgb(255, 255, 255);
+    overflow-x: auto;
+    overflow-y: scroll;
 }
